# Dijkstra-s-algorithm-visualizer

./: CMakeLists.txt  README.md  algorithm_config.json  dijkstras_config.json  map_config.json
src/: logic.cpp  main.cpp  simulation.cpp
src/includes/: algorithm.hpp  character.hpp  cityStructures.hpp  cityWidget.hpp  connectionWidget.hpp  dijkstras_steps.hpp  logic.hpp  simulation.hpp  structures.hpp  widget.hpp
